# estruturando_projeto

./: README.md  main.py  postgres_db_credentials.txt  pyproject.toml
ETL/: extract.py
